[package]
name = "i_tree"
version = "0.16.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Expiration key tree. Usable in algorithms like swipe line. Only for uniq elements"
license = "MIT"
repository = "https://github.com/iShape-Rust/iTree"

[dev-dependencies]
rand = "0.9.0"